# microsoft-365-emad

./: pyproject.toml
src/microsoft_365_emad/: __init__.py  inference.py  o365_client.py  register.py
src/microsoft_365_emad/flows/: calendar.py  email.py  imperator.py  onedrive.py  token_management.py
src/microsoft_365_emad/prompts/: imperator_identity.md
